--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@clerk/themes": "^2.1.20",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
