--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.29.0",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
